style(css): set width to 1000

--- a/contents/_posts/2022-04-20-magisk.md
+++ b/contents/_posts/2022-04-20-magisk.md
@@ -35,7 +35,7 @@ PixelExperience_Plus_kebab-12.1-20220410-0820-OFFICIAL.zip
 $ adb sideload PixelExperience_Plus_kebab-12.1-20220410-0820-OFFICIAL.zip
 ```
 
-如果 recovery 支持直接安装刷机包，则可以提前将刷机包下载至手机上，并选择直接安装。
+> 如果 recovery 支持直接安装刷机包，则可以提前将刷机包下载至手机上，并选择直接安装。
 
 完成后重启手机进入系统。
 
